--- a/charts/mantle/templates/certificate.yaml
+++ b/charts/mantle/templates/certificate.yaml
@@ -1,4 +1,3 @@
-{{- if eq .Values.controller.role "secondary" }}
 {{- if .Values.webhook.enabled }}
 {{- if eq .Values.webhook.certificate.managedBy "cert-manager" }}
 apiVersion: cert-manager.io/v1
@@ -7,7 +6,7 @@ metadata:
   name: {{ include "mantle.fullname" . }}-webhook
   namespace: {{ .Release.Namespace }}
   labels:
-    {{- include "mantle.labels" . | nindent 4 }}
+    {{- include "mantle.webhookLabels" . | nindent 4 }}
     {{- with .Values.labels }}
     {{- toYaml . | nindent 4 }}
     {{- end }}
@@ -27,6 +26,5 @@ spec:
     - key encipherment
     - server auth
     - client auth
-{{- end }}
 {{- end }}
 {{- end }}
