--- a/charts/mantle/templates/service.yaml
+++ b/charts/mantle/templates/service.yaml
@@ -16,6 +16,7 @@ spec:
     {{- end }}
   selector:
     {{- include "mantle.selectorLabels" . | nindent 4 }}
+{{ end }}
 {{- if .Values.webhook.enabled }}
 ---
 apiVersion: v1
@@ -30,6 +31,5 @@ spec:
     protocol: TCP
     name: webhook
   selector:
-    {{- include "mantle.selectorLabels" . | nindent 4 }}
-{{ end }}
+    {{- include "mantle.webhookSelectorLabels" . | nindent 4 }}
 {{ end }}
