--- a/.golangci.yml
+++ b/.golangci.yml
@@ -7,24 +7,52 @@ linters:
       dot-import-whitelist: # allow dot imports for the following packages
         - github.com/onsi/gomega
         - github.com/onsi/ginkgo/v2
-  default: none
-  enable:
-    - copyloopvar
-    - dupl
-    - errcheck
-    - errorlint
-    - goconst
-    - gocyclo
-    - govet
-    - ineffassign
-    - lll
-    - misspell
-    - nakedret
-    - prealloc
-    - staticcheck
-    - unconvert
-    - unparam
-    - unused
+  default: all
+  disable:
+    - containedctx
+    - contextcheck
+    - cyclop
+    - depguard
+    - embeddedstructfieldcheck
+    - err113
+    - exhaustruct
+    - forbidigo
+    - forcetypeassert
+    - funcorder
+    - funlen
+    - ginkgolinter
+    - gochecknoglobals
+    - gochecknoinits
+    - gocognit
+    - gocritic
+    - godoclint
+    - godot
+    - godox
+    - gosec
+    - interfacebloat
+    - intrange
+    - ireturn
+    - maintidx
+    - mnd
+    - modernize
+    - nestif
+    - nilerr
+    - nilnil
+    - nlreturn
+    - noctx
+    - noinlineerr
+    - nolintlint
+    - paralleltest
+    - perfsprint
+    - protogetter
+    - revive
+    - tagliatelle
+    - testpackage
+    - varnamelen
+    - wastedassign
+    - wrapcheck
+    - wsl
+    - wsl_v5
   exclusions:
     rules:
       - linters:
