--- a/.golangci.yml
+++ b/.golangci.yml
@@ -25,7 +25,6 @@ linters:
     - gocognit
     - gocritic
     - godoclint
-    - godot
     - godox
     - gosec
     - interfacebloat
@@ -51,6 +50,9 @@ linters:
     rules:
       - linters:
           - lll
+
+          # kubebuiler generates code that triggers godot, so we disable it for the api/ directory.
+          - godot
         path: api/*
       - linters:
           - dupl
