--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -17,8 +17,7 @@ on:
 
 jobs:
   build:
-    runs-on: mantle_large_runner_16core
-    #runs-on: "ubuntu-22.04"
+    runs-on: "ubuntu-22.04"
     timeout-minutes: 60
     steps:
       - uses: actions/checkout@v4
